# native-script-playground

battery-checker/: nativescript.config.ts  package-lock.json  package.json
battery-checker/app/: main-page.ts  main-page.xml  main-view-model.ts
huge-list-app/: nativescript.config.ts  package-lock.json  package.json
huge-list-app/app/: app-root.xml  app.ts
huge-list-app/app/list/: list-page.ts  list-page.xml  list-view-model.ts
huge-list-app/app/list-page/: list-page-model.ts  list-page.ts  list-page.xml
huge-list-app/app/models/: benchmark.model.ts
master-detail/: nativescript.config.ts  package-lock.json  package.json
master-detail/app/: app.css
master-detail/app/details/: details-page.ts  details-page.xml  details-view-model.ts
my-own-native-script/: README.md
my-own-native-script/.metals/: metals.lock.db  metals.mv.db
my-own-native-script/cpp-runtime/: CMakeLists.txt  Metadata.h  runtime.cpp
my-own-native-script/math-app/: pom.xml
my-own-native-script/metadata-generator/: pom.xml
myCoolApp/: package-lock.json  package.json
myCoolApp/app/: main-page.xml
myHero/: .env.example  .gitignore  nativescript.config.ts  package-lock.json  package.json  references.d.ts
myHero/app/: app-root.ts  app-root.xml  app.css  main-page.ts  main-page.xml  main-view-model.ts
ns-ui-kit/: .travis.yml  README.md  package-lock.json  tsconfig.base.json
ns-ui-kit/tools/: package-settings.json  workspace-scripts.js
todo-list/: nativescript.config.ts  package-lock.json  package.json
todo-list/app/: app-root.ts  app-root.xml  app.css
(+53 files in other folders)
